<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity_login" >

    
     <TextView
        android:id="@+id/sign_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sign_username"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="29dp"
        android:text="@string/sign_in" />
     
      <TextView
        android:id="@+id/label_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sign_username"
        android:layout_alignBottom="@+id/sign_username"
        android:layout_alignParentLeft="true"
        android:text="@string/label_username" />

    <TextView
        android:id="@+id/label_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/sign_password"
        android:layout_alignBottom="@+id/sign_password"
        android:layout_alignParentLeft="true"
        android:text="@string/label_password" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="23dp"
        android:layout_marginLeft="17dp"
        android:text="@string/copyright"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/sign_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/sign_note"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="text" />

    <EditText
        android:id="@+id/sign_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sign_username"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/sign_username"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/confirmpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label_password"
        android:layout_alignRight="@+id/label_username"
        android:layout_below="@+id/sign_password"
        android:layout_marginTop="41dp"
        android:text="@string/confirmpassword" />

    <EditText
        android:id="@+id/edit_confirmpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/confirmpassword"
        android:layout_alignLeft="@+id/sign_password"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/edit_confirmpassword"
        android:layout_alignRight="@+id/sign_note"
        android:layout_below="@+id/edit_confirmpassword"
        android:layout_marginTop="24dp"
        android:text="@string/create" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/create"
        android:layout_alignBottom="@+id/create"
        android:layout_alignRight="@+id/edit_confirmpassword"
        android:layout_toRightOf="@+id/create"
        android:text="@string/cancel" />

</RelativeLayout>